--- a/PythonFiles/K-A-SFI-Data-1994-2022/README
+++ b/PythonFiles/K-A-SFI-Data-1994-2022/README
@@ -22,7 +22,7 @@ The SWPC Primary GOES satellite for the Electron Fluence was changed from
 GOES 12 to GOES 11 on December 1, 2008.
  
 SWPC keeps older preliminary data online from 1996 for customers who want
-this data. See /ftp/pub/warehouse or
+this data. See: ftp.swpc.noaa.gov/ftp/pub/warehouse or
 http://www.swpc.noaa.gov/ftpmenu/warehouse.html
 
 
